--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "core-js": "^3.26.1",
     "express": "^4.18.2",
     "idb": "^7.1.1",
     "lazysizes": "^5.3.2",
